# lab06

./: CMakeLists.txt  CPack.cmake  README.md
.github/workflows/: CI.yml  CPack.yml  MacOS.yml  MacOS_WIN.yml  WIN.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  source
hello_world_application/formatter/: Makefile  cmake_install.cmake
hello_world_application/formatter_ex/: Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  source
solver_application/formatter/: Makefile  cmake_install.cmake
solver_application/formatter_ex/: Makefile  cmake_install.cmake
solver_application/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
